--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/esimondet/petsnack#readme",
   "dependencies": {
+    "aws-sdk": "^2.1062.0",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^14.1.0",
@@ -31,6 +32,7 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
+    "randombytes": "^2.1.0",
     "sequelize": "^6.13.0"
   }
 }
